# agent-audit-samples

./: .gitignore  README.md  run_bandit.sh
bandit_reports/: mindshare-langgraph_bandit_report.json  multi-personality-agent-langgraph_bandit_report.json
mindshare-langgraph/: README.md  agent.py  constants.py  pyproject.toml  setup.py  system_prompt.txt
mindshare-langgraph-guardrailed/: README.md  agent.py  constants.py  pyproject.toml  setup.py  system_prompt.txt
multi-personality-agent-langgraph/: README.md  agent.py  constants.py  metadata.json  prompts.py  pyproject.toml  requirements.txt
