[tool.poetry]
name = "multi-personality-agent-langgraph"
version = "0.0.1"
description = "The NEAR AI multi-personality agent refactored to use only langchain and langgraph frameworks."
authors = ["Vele Tosevski <vele@vijil.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langgraph = ">=0.4.8,<0.5.0"
langchain-openai = ">=0.3.19"
langchain = ">=0.3.25"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
